projekt2/mka-supplementary-tests/test04.err
  File "mka.py", line 350
    """        out = "{"
                 ^
SyntaxError: invalid syntax
